--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
   <style>
     label { display: block; margin-top: 5px; }
+    #listDisplay { margin-top: 5px; font-weight: bold; }
   </style>
 </head>
 <body>
   <h2>探索アルゴリズムデモ</h2>
 
-  <!-- UI説明付き -->
   <label>アルゴリズム選択：探索方法を選択</label>
   <select id="algorithm">
     <option value="linear">線形探索</option>
@@ -29,12 +29,15 @@
 
   <button onclick="runAlgorithm()">実行</button>
   <p id="counter">操作数: 0</p>
+  <p id="listDisplay">リストの要素: -</p>
 
   <script>
     let arr = [];
     let steps = [];
     let counter = 0;
     let currentIndex = -1;
+    let animationRunning = false;
+    let status = []; // 要素の状態：0=未探索, 1=探索済み, 2=現在
 
     function setup(){
       createCanvas(800, 250).parent(document.body);
@@ -43,28 +46,41 @@
 
     function draw(){
       background(255);
-      if(steps.length > 0){
-        drawArray();
+      if(animationRunning && steps.length > 0){
         currentIndex = steps[counter];
+
+        // 現在の要素を探索済みにする
+        if(currentIndex >= 0) status[currentIndex] = 2; // 現在
+        drawArray();
+
+        // 探索完了後、現在要素を探索済みに戻す
+        if(currentIndex >= 0) status[currentIndex] = 1; // 探索済み
+
         counter++;
-        if(counter >= steps.length) steps = [];
+        if(counter >= steps.length) {
+          steps = [];
+          animationRunning = false;
+        }
         document.getElementById("counter").innerText = "操作数: " + counter;
       } else {
-        currentIndex = -1; // アニメーション終了
+        currentIndex = -1;
+        drawArray(); // 探索終了後も画面残す
       }
     }
 
     function drawArray(){
       for(let i=0;i<arr.length;i++){
-        if(i === currentIndex){
-          fill('red'); // 探索中の要素
+        if(status[i] === 2){
+          fill('red'); // 現在探索中
+        } else if(status[i] === 1){
+          fill('gray'); // 探索済み
         } else {
-          fill('blue');
+          fill('blue'); // 未探索
         }
         rect(50*i, height-50, 40, -arr[i]*10);
         fill(0);
         textAlign(CENTER, BOTTOM);
-        text(arr[i], 50*i+20, height-55); // 数値表示
+        text(arr[i], 50*i+20, height-55);
       }
     }
 
@@ -75,32 +91,32 @@
 
       // 配列生成
       arr = Array.from({length:size}, ()=>Math.floor(Math.random()*20)+1);
-
-      // 二分探索の場合はソート
       if(algo === 'binary'){
         arr.sort((a,b)=>a-b);
       }
 
+      // 要素表示
+      document.getElementById("listDisplay").innerText = "リストの要素: " + arr.join(", ");
+
+      // 状態配列初期化
+      status = new Array(arr.length).fill(0);
+
+      // アニメーション準備
       counter = 0;
       steps = [];
+      animationRunning = true;
 
       if(algo === 'linear'){
-        // 線形探索ステップ
         for(let i=0;i<arr.length;i++) steps.push(i);
       } else if(algo === 'binary'){
-        // 二分探索ステップ
         let left = 0;
-        let right = arr.length - 1;
+        let right = arr.length-1;
         while(left <= right){
           let mid = Math.floor((left+right)/2);
           steps.push(mid);
-          if(arr[mid] === target){
-            break;
-          } else if(arr[mid] < target){
-            left = mid + 1;
-          } else {
-            right = mid -1;
-          }
+          if(arr[mid] === target) break;
+          else if(arr[mid] < target) left = mid+1;
+          else right = mid-1;
         }
       }
     }
