--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@ let counter = 0;
 let currentIndex = -1;
 let animationRunning = false;
 let status = []; // 0=未探索,1=探索済,2=現在
-let left=0, right=0;
 let foundIndex = -1;
 
 function setup(){
@@ -51,11 +50,15 @@ function setup(){
 
 function draw(){
   background(255);
+  let stepInfo = steps[counter] || {};
+  let curLeft = stepInfo.l !== undefined ? stepInfo.l : 0;
+  let curRight = stepInfo.r !== undefined ? stepInfo.r : arr.length-1;
+
   if(animationRunning && steps.length > 0){
-    currentIndex = steps[counter];
+    currentIndex = (stepInfo.mid !== undefined) ? stepInfo.mid : steps[counter];
 
     if(currentIndex >= 0) status[currentIndex] = 2;
-    drawArray();
+    drawArray(curLeft, curRight);
     if(currentIndex >= 0) status[currentIndex] = 1;
 
     counter++;
@@ -66,11 +69,11 @@ function draw(){
     }
     document.getElementById("counter").innerText = "操作数: " + counter;
   } else {
-    drawArray(); // 探索終了後も画面残す
+    drawArray(0, arr.length-1);
   }
 }
 
-function drawArray(){
+function drawArray(curLeft, curRight){
   let n = arr.length;
   let barWidth = width / n * 0.8;
   let gap = width / n * 0.2;
@@ -78,21 +81,16 @@ function drawArray(){
   for(let i=0;i<n;i++){
     let fillColor = 'blue';
 
-    // 二分探索で範囲外は探索中のみグレー
-    if(document.getElementById("algorithm").value==='binary' && animationRunning && (i<left || i>right)){
-      fillColor='gray';
+    if(document.getElementById("algorithm").value==='binary' && animationRunning){
+      if(i<curLeft || i>curRight) fillColor='gray';
     }
-    // 探索済みのバー（見つかった要素は黄色）
     else if(status[i]===1 && i!==foundIndex) fillColor='gray';
-    // 現在探索中
     if(status[i]===2) fillColor='red';
-    // 見つかった要素
     if(i===foundIndex) fillColor='yellow';
 
     fill(fillColor);
     rect(i*(barWidth+gap), height-50, barWidth, -arr[i]*8);
 
-    // 見つかったバーを太枠で強調
     if(i===foundIndex){
       strokeWeight(3);
       stroke(0);
@@ -125,28 +123,27 @@ function runAlgorithm(){
   let algo = document.getElementById("algorithm").value;
 
   counter=0; steps=[]; animationRunning=true;
-  status.fill(0);
-  foundIndex=-1;
+  status.fill(0); foundIndex=-1;
   document.getElementById("resultDisplay").innerText="";
 
   if(algo==='linear'){
     for(let i=0;i<arr.length;i++){
       steps.push(i);
       if(arr[i]===target){
-        foundIndex=i; // 見つかった要素
+        foundIndex=i;
         break;
       }
     }
   } else if(algo==='binary'){
-    left=0; right=arr.length-1;
-    while(left<=right){
-      let mid = Math.floor((left+right)/2);
-      steps.push(mid);
+    let l = 0, r = arr.length-1;
+    while(l <= r){
+      let mid = Math.floor((l+r)/2);
+      steps.push({mid:mid, l:l, r:r});
       if(arr[mid]===target){
         foundIndex=mid;
         break;
-      } else if(arr[mid]<target) left=mid+1;
-      else right=mid-1;
+      } else if(arr[mid]<target) l=mid+1;
+      else r=mid-1;
     }
   }
 }
